bad/for_string_over_class.example_compiler_output
ERROR
[1mbad/for_string_over_class.lat:5:18: [1;31merror: [0;1mfor cannot iterate over value of non-array type `Y`[m
	for (string x : new Y) {}
	                [1;32m^[m
